##############################################################################################
# CMAKE Configurations for UppASD
# (C) Anders Bergman 2019
#
# Acknowledgements:
# https://github.com/SethMMorton/cmake_fortran_template  (for starting template)
# https://github.com/openmeeg/findmkl_cmake/blob/master/cmake/FindMKL.cmake (for FindMKL)
# https://github.com/libigl/eigen/blob/master/cmake/FindFFTW.cmake (for FindFFTW)
# https://github.com/andrew-hardin/cmake-git-version-tracking (for git tracking)
#
##############################################################################################


##############################################################################################
# Add remaining sources
##############################################################################################
# Source files in root directory
# Sources in sub-directories
add_subdirectory(chapter6)
add_subdirectory(chapter7)
#############################################################################################



